--- a/http/ubuntu-14.04/preseed.cfg
+++ b/http/ubuntu-14.04/preseed.cfg
@@ -20,13 +20,12 @@ d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
 d-i partman/confirm_write_new_label boolean true
-d-i passwd/user-fullname string vagrant
-d-i passwd/user-uid string 900
-d-i passwd/user-gid string 900
-d-i passwd/user-password password vagrant
-d-i passwd/user-password-again password vagrant
-d-i passwd/username string vagrant
-d-i pkgsel/include string openssh-server cryptsetup build-essential libssl-dev libreadline-dev zlib1g-dev linux-source dkms nfs-common haveged vim git puppet
+d-i passwd/user-fullname string asf999
+d-i passwd/user-uid string 999
+d-i passwd/user-gid string 999
+d-i passwd/user-password password asf999
+d-i passwd/user-password-again password asf999
+d-i passwd/username string asf999
 d-i pkgsel/install-language-support boolean false
 d-i pkgsel/update-policy select none
 d-i pkgsel/upgrade select full-upgrade
@@ -36,5 +35,7 @@ d-i user-setup/encrypt-home boolean false
 d-i mirror/country string manual
 d-i mirror/http/hostname string ubuntu.osuosl.org
 d-i mirror/http/directory string /ubuntu
+d-i mirror/http/proxy string http://10.0.2.2:3142/
 tasksel tasksel/first multiselect standard, ubuntu-server
+d-i pkgsel/include string openssh-server cryptsetup build-essential libssl-dev libreadline-dev zlib1g-dev linux-source dkms nfs-common haveged vim git puppet
 d-i pkgsel/upgrade select full-upgrade
