--- a/http/ubuntu-14.04/preseed.cfg
+++ b/http/ubuntu-14.04/preseed.cfg
@@ -36,5 +36,5 @@ d-i mirror/country string manual
 d-i mirror/http/hostname string ubuntu.osuosl.org
 d-i mirror/http/directory string /ubuntu
 tasksel tasksel/first multiselect standard, ubuntu-server
-d-i pkgsel/include string openssh-server cryptsetup build-essential libssl-dev libreadline-dev zlib1g-dev linux-source dkms nfs-common haveged vim git puppet
+d-i pkgsel/include string openssh-server cryptsetup build-essential libssl-dev libreadline-dev zlib1g-dev linux-source dkms nfs-common haveged vim git puppet cloud-initramfs-growroot
 d-i pkgsel/upgrade select full-upgrade
